# codestar-maze

./: README.md  README.rst  pyproject.toml  setup.cfg  setup.py
src/codestare/mazes/: algorithms.py  main.py  representation.py
test/: test_main.py  test_representation.py
