[metadata]
name = codestare-maze
url = https://themenwhostareatco.de/
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = Simple Maze Generator
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst

keywords = maze, dnd, rpg
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    maze-gen = codestare.mazes.main:main [cli]

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest == 7.1.2

dev =
    setuptools-changelog == 1.0.0

[changelog]
changelog_fragments_path = changelog.d
major_changes_types =
    removal = Breaking Changes
minor_changes_types =
    feature = New Features
patch_changes_types =
    bugfix = Bug Fixes
    doc = Documentation
    misc = Miscellaneous